# technitium-content-filter

./: .gitignore  Dockerfile.build  Dockerfile.integration-test  Dockerfile.perf-comparison  Dockerfile.test  LICENSE  README.md  SECURITY.md  build.sh  docker-compose.example.yaml  mkdocs.yml  stryker-config.json
.github/: dependabot.yml
.github/workflows/: badges.yml  ci.yaml  ci.yml  codeql.yaml  codeql.yml  docs.yaml  docs.yml  perf-comparison.yaml  release.yaml  release.yml
docs/: index.md  reference-api.md  reference.md
docs/architecture/: compilation.md  filtering.md  overview.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  web-ui.md
docs/guide/: allowlists.md  base-profile.md  blocklists.md  clients.md  profiles.md  rewrites.md  rules.md  schedules.md  services.md
docs/reference/: advanced-blocking-comparison.md
src/ContentFilter/: App.cs  ContentFilter.csproj
src/ParentalControlsApp/: App.cs  ParentalControlsApp.csproj
tests/: README.md  coverlet.runsettings
tests/ContentFilter.Benchmarks/: ContentFilter.Benchmarks.csproj  DomainMatcherBenchmarks.cs  FilteringServiceBenchmarks.cs  ProfileCompilerBenchmarks.cs
tests/ContentFilter.IntegrationTests/: ContentFilter.IntegrationTests.csproj  DnsFilteringTests.cs  TechnitiumCollection.cs  TechnitiumFixture.cs
tests/ContentFilter.PerformanceComparison/: ContentFilter.PerformanceComparison.csproj  DualFixture.cs  GlobalUsings.cs
tests/ContentFilter.TestInfrastructure/: AdvancedBlockingFixture.cs  BaseTechnitiumFixture.cs  ContentFilter.TestInfrastructure.csproj  ContentFilterFixture.cs  DnsResponse.cs
tests/ContentFilter.Tests/: AppTests.cs  BlockListDeduplicationTests.cs  BlockListManagerHttpTests.cs  BlockListManagerTests.cs  BlockListParserTests.cs  BlockingAddressSetTests.cs  CaseInsensitiveProfileTests.cs  ConfigServiceTests.cs  (+21 more)
web/: Dockerfile  app.py  config.py  filtering.py  middleware.py  pyproject.toml  routes.py  tailwind.config.js
web/static/js/: clients.js  common.js  dashboard.js  filters-allowlists.js  filters-blocklists.js  filters-rewrites.js  filters-rules.js  filters-services.js  profiles.js
web/technitium_content_filter/: __main__.py  app.py  cli.py  config.py  filtering.py  guards.py  middleware.py  rate_limiter.py  routes.py
web/technitium_content_filter/controllers/: __init__.py  auth.py  clients.py  pages.py  profiles.py  services.py  settings.py
web/technitium_content_filter/static/js/: clients.js  common.js  dashboard.js  filters-allowlists.js  filters-blocklists.js  filters-regex.js  filters-rewrites.js  filters-rules.js  filters-services.js  profile-detail.js  profiles.js  settings.js
web/technitium_content_filter/templates/: base.html  clients.html  dashboard.html  filters_allowlists.html  filters_blocklists.html  filters_regex.html  filters_rewrites.html  filters_rules.html  login.html  profile_detail.html  profiles.html  settings.html
web/templates/: base.html  clients.html  dashboard.html  filters_allowlists.html  filters_blocklists.html  filters_rewrites.html  filters_rules.html  filters_services.html  profiles.html
web/tests/: conftest.py  test_api_blocklists.py  test_api_clients.py  test_api_filters.py  test_api_profiles.py  test_api_regex.py  test_api_services.py  test_api_settings.py  test_api_test_domain.py  test_auth.py  test_concurrency_validation_edge.py  test_config.py  test_error_handling.py  test_helpers.py  test_integration.py  test_login.py  test_middleware.py  test_profile_rename.py  test_property.py  test_regex_filtering.py  test_reload.py  test_routes.py  test_save_errors.py
web/tests/e2e/: conftest.py  test_clients.py  test_dashboard.py  test_filters_allowlists.py  test_filters_blocklists.py  test_filters_regex.py  test_filters_rewrites.py  test_filters_rules.py  test_filters_services.py  test_profiles.py  test_xss_prevention.py
(+68 files in other folders)
