[project]
name = "parental-controls-web"
version = "1.0.0"
description = "Web UI for Technitium Parental Controls DNS App"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.41,<1.0",
    "hypercorn>=0.17,<1.0",
    "mako>=1.3,<2.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<8.0",
    "respx>=0.22,<1.0",
    "hypothesis>=6.100,<7.0",
    "pytest-playwright>=0.6,<1.0",
    "uvicorn>=0.30,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing -m 'not e2e'"
markers = [
    "unit: Unit tests (config, migrations, helpers)",
    "api: API endpoint tests",
    "route: Page route rendering tests",
    "property: Hypothesis property-based tests",
    "e2e: End-to-end browser tests (requires playwright)",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs-material>=9.0,<10.0",
    "pymdown-extensions>=10.0,<11.0",
]

[tool.mypy]
strict = true
files = ["app.py"]

[[tool.mypy.overrides]]
module = "mako.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4", "PIE", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
